fix: skip lefthook install in production build environments
- Update prepare script to check for git availability
- Prevents build failures in Vercel deployment environment
- Maintains lefthook functionality for local development

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "type-check": "tsc --noEmit",
-    "prepare": "lefthook install",
+    "prepare": "command -v git >/dev/null 2>&1 && lefthook install || echo 'Skipping lefthook install (no git available)'",
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
