feat: replace Jest with Vitest for modern, fast testing
BREAKING CHANGE: Replace Jest with Vitest as the primary testing framework

Features:
- Add Vitest configuration with TypeScript support
- Create comprehensive test setup with global mocks
- Add example test files demonstrating Vitest capabilities
- Configure coverage reporting with v8 provider
- Add Vitest UI support for browser-based testing
- Update npm scripts for various test modes

Testing Improvements:
- Faster test execution with native ES modules support
- Better TypeScript integration out of the box
- Hot module reloading for test files in watch mode
- Enhanced coverage reporting with detailed metrics
- Simplified mocking compared to Jest

Configuration:
- vitest.config.ts with React support and path aliases
- src/test/setup.ts with global test configuration
- Package.json scripts: test, test:run, test:coverage, test:ui
- Updated Lefthook to run tests on pre-commit
- Updated documentation in README and TAKE_HOME_CONSIDERATIONS
- Added vitest/globals to TypeScript types

Example Tests:
- lib/utils.test.ts: Utility functions and Vitest features demo
- lib/templates/index.test.ts: Template system tests
- app/components/ChatInterface.test.tsx: React component tests

Coverage: 18 tests passing with comprehensive coverage reporting

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -13,6 +13,9 @@ pre-commit:
       glob: "*.{ts,tsx}"
       run: npx tsc --noEmit
 
+    test:
+      run: npm run test:run
+
 
 commit-msg:
   commands:
