feat: add environment variable git user config
Solve Vercel production git user issue with automatic
configuration from environment variables.

Implementation:
- Auto-configure git user from GIT_USER_NAME/GIT_USER_EMAIL
- Modified GitTools.initRepository() for automatic setup
- Enhanced git_configure_user with env var fallbacks
- Added git_configure_user_from_env MCP tool
- Created comprehensive .env.example template

Benefits:
- Zero-configuration git operations in production
- Consistent commit authorship across projects
- Eliminates 'git user not configured' errors
- Seamless developer experience with backwards compatibility

Environment variables:
- GIT_USER_NAME=Project Scaffolder
- GIT_USER_EMAIL=scaffolder@example.com

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,11 @@
 # Get your API key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Git User Configuration (for generated projects)
+# These will be used automatically when creating git repositories via MCP
+# IMPORTANT: Configure these in Vercel dashboard for production deployments
+GIT_USER_NAME=Project Scaffolder
+GIT_USER_EMAIL=scaffolder@example.com
+
 # Optional: Node Environment
 NODE_ENV=development
