feat: replace git CLI with GitHub API integration
Replace git command-line operations with GitHub API to solve
Vercel serverless environment limitations.

Major changes:
- Install @octokit/rest for GitHub API integration
- Create GitHubService class for repository operations
- Create RepositoryTools class to replace GitTools
- Update all MCP tools to use GitHub API instead of git CLI
- Add GITHUB_TOKEN environment variable support
- Fix all TypeScript linting errors and warnings

Key features:
- Create repositories directly on GitHub
- Commit files via GitHub API (no local git required)
- Works seamlessly in Vercel serverless environment
- Automatic repository creation with proper naming
- Environment variable fallback for git user configuration

Benefits:
- ✅ No dependency on git CLI in production
- ✅ Works in any serverless environment
- ✅ Automatic GitHub repository creation
- ✅ Direct file commits to GitHub
- ✅ Proper commit authorship from environment variables
- ✅ Backward compatible with existing workflows

Environment variables:
- GITHUB_TOKEN: Required for GitHub API operations
- GIT_USER_NAME: Used for commit authorship
- GIT_USER_EMAIL: Used for commit authorship

This completely eliminates the git CLI dependency while
providing enhanced functionality through GitHub integration.

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,13 @@
 # Get your API key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
 
+# GitHub API Configuration (for repository operations)
+# Get your token from: https://github.com/settings/tokens
+# Required scopes: repo, user
+GITHUB_TOKEN=your_github_token_here
+
 # Git User Configuration (for generated projects)
-# These will be used automatically when creating git repositories via MCP
+# These will be used automatically when creating git repositories via GitHub API
 # IMPORTANT: Configure these in Vercel dashboard for production deployments
 GIT_USER_NAME=Project Scaffolder
 GIT_USER_EMAIL=scaffolder@example.com
