--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "ai": "^5.0.49",
+    "archiver": "^7.0.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "next": "15.5.4",
@@ -43,6 +44,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/archiver": "^6.0.3",
     "@types/node": "^20",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^2.1.8",
