--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "lint:fix": "eslint --fix",
     "type-check": "tsc --noEmit",
     "prepare": "command -v git >/dev/null 2>&1 && lefthook install || echo 'Skipping lefthook install (no git available)'",
-    "commitlint": "commitlint --edit"
+    "commitlint": "commitlint --edit",
+    "deploy": "npm run build && npm run start",
+    "deploy:vercel": "npx vercel --prod",
+    "deploy:preview": "npx vercel"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.32",
@@ -54,6 +57,7 @@
     "jsdom": "^25.0.1",
     "lefthook": "^1.13.4",
     "typescript": "^5",
+    "vercel": "^39.2.4",
     "vitest": "^2.1.8"
   }
 }
