feat: add GitHub organization support and update documentation
GitHub Organization Support:
- Add GITHUB_ORG environment variable for configurable repository ownership
- Support creating repositories under organizations or personal accounts
- Update repository tools to use GITHUB_ORG when specified
- Add GITHUB_ORG to health check API for monitoring

Documentation Updates:
- Update README with recent changes section highlighting repository fixes
- Add GitHub organization configuration to all documentation
- Update API reference with enhanced GitHub integration details
- Update implementation guide with complete environment setup
- Document agent response restructuring and transparency features

Environment Configuration:
- Add GITHUB_ORG=mcp-integration to local environment
- Update .env.example with new GitHub organization variable
- Include organization configuration in deployment guides
- Add environment variable validation to health endpoint

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Required scopes: repo, user
 GITHUB_TOKEN=your_github_token_here
 
+# GitHub Organization/User Configuration
+# Specify the GitHub organization or username where repositories will be created
+# Default: Use authenticated user's personal account
+GITHUB_ORG=mcp-integration
+
 # Git User Configuration (for generated projects)
 # These will be used automatically when creating git repositories via GitHub API
 # IMPORTANT: Configure these in Vercel dashboard for production deployments
