--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,10 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Required scopes: repo, user
 GITHUB_TOKEN=your_github_token_here
 
-# GitHub Organization/User Configuration
+# GitHub Owner Configuration
 # Specify the GitHub organization or username where repositories will be created
 # Default: Use authenticated user's personal account
-GITHUB_ORG=mcp-integration
+GITHUB_OWNER=mcp-integration
 
 # Git User Configuration (for generated projects)
 # These will be used automatically when creating git repositories via GitHub API
