refactor: centralize typings into app/typings and src/typings directories
BREAKING CHANGE: Reorganized type definitions for better separation of concerns

Major changes:
- Created app/typings/ for server-side and API types (SSR, API routes)
- Created src/typings/ for client-side and frontend types (CSR, components)
- Moved and reorganized type definitions based on usage patterns:
  - app/typings/mcp.ts: MCP protocol, ProjectTemplate, ProjectInfo for APIs
  - src/typings/ui.ts: Message, MCPLogEntry, frontend ProjectInfo/ProjectTemplate
  - src/typings/api.ts: Client-side API communication types

Structure changes:
- types/mcp.ts → app/typings/mcp.ts + src/typings/ui.ts (split by usage)
- Added index.ts files for easier importing from each typings folder
- Updated tsconfig.json with new paths configuration
- Removed old types/ directory after migration

Import path updates:
- API routes: Use app/typings for server-side types
- Components: Use src/typings for client-side types
- Updated all 6 files that imported from the old types location

TypeScript configuration:
- Added @/types/*, @/app-types/*, @/src-types/* path mappings
- Updated include paths to cover new typings directories
- Maintained full type safety and compilation success

Benefits:
- Clear separation between server-side and client-side types
- Better organization following Next.js app structure
- Easier to maintain and understand type usage patterns
- Prevents accidental cross-boundary type imports
- Improved developer experience with focused type imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,11 @@
     "paths": {
       "@/*": ["./src/*", "./*"],
       "@/lib/*": ["./src/lib/*"],
-      "@/types/*": ["./src/lib/types/*"]
+      "@/types/*": ["./src/typings/*", "./app/typings/*"],
+      "@/app-types/*": ["./app/typings/*"],
+      "@/src-types/*": ["./src/typings/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/typings/**/*.ts", "src/typings/**/*.ts"],
   "exclude": ["node_modules"]
 }
