feat: add left sidebar with repository list and context switching
- Add API endpoint to list repositories from GitHub owner namespace
- Create ProjectSidebar component with collapsible repository list
- Add RepositoryContext for managing selected repository state
- Create RepositoryPreview component to display repository details
- Update ChatInterface to support repository mode with context switching
- Integrate sidebar into main layout with responsive design
- Install @heroicons/react for sidebar icons

The sidebar shows scaffolded projects separately from other repositories,
allows filtering/searching, and updates the preview panel when a repository
is selected, similar to ChatGPT's conversation list interface.

Fixed lint warnings and TypeScript errors for proper type safety.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.32",
+    "@heroicons/react": "^2.2.0",
     "@octokit/rest": "^22.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
