refactor: standardize imports with aliases and consolidate typings
- Consolidate all typings from src/typings and app/typings into root /types folder
- Create organized type modules: ui.ts, api.ts, mcp.ts, project.ts, repository.ts
- Configure comprehensive path aliases in tsconfig.json:
  - @/types for centralized type imports
  - @/lib/* for library imports
  - @/components/* for component imports
  - @/contexts/* for React contexts
  - @/hooks/* for custom hooks
  - @/api/* for API routes
- Replace all relative imports with standardized alias-based imports
- Remove multi-step lookups like '../../../src/lib/ai-service'
- Update all components to use @/types for type imports
- Fix ChatInterface component structure and linting issues
- Update UserProfile to use Next.js Image component
- Verify Next.js build and TypeScript checking still work correctly
- Remove old typing folders after successful migration

This improves code maintainability, reduces import complexity, and provides
a standardized approach to module imports across the entire codebase.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,11 +22,14 @@
     "paths": {
       "@/*": ["./src/*", "./*"],
       "@/lib/*": ["./src/lib/*"],
-      "@/types/*": ["./src/typings/*", "./app/typings/*"],
-      "@/app-types/*": ["./app/typings/*"],
-      "@/src-types/*": ["./src/typings/*"]
+      "@/types": ["./types"],
+      "@/types/*": ["./types/*"],
+      "@/components/*": ["./src/components/*", "./app/components/*"],
+      "@/contexts/*": ["./app/contexts/*"],
+      "@/hooks/*": ["./src/hooks/*"],
+      "@/api/*": ["./app/api/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/typings/**/*.ts", "src/typings/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "types/**/*.ts"],
   "exclude": ["node_modules"]
 }
