refactor: move lib folder to root level for better architecture
BREAKING CHANGE: Move shared library code from src/lib to root-level lib folder

- Move src/lib/ to lib/ at project root level
- Update tsconfig.json path alias '@/lib/*' to point to './lib/*'
- Maintain all existing @/lib/* imports (no import changes needed)
- Update README.md project structure documentation
- Verify Next.js build and TypeScript checking work correctly

This improves the project architecture by:
- Making lib folder accessible to both app/ and src/ directories
- Eliminating awkward cross-directory imports
- Creating clearer separation between frontend (src/), backend (app/),
  and shared utilities (lib/)
- Following common patterns where shared code lives at project root

All imports continue to use @/lib/* aliases, so no code changes required.
The lib folder now contains:
- ai-service.ts (AI integration)
- github-service.ts (GitHub API client)
- mcp-client.ts (MCP protocol client)
- hooks/ (shared React hooks)
- templates/ (project templates)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     ],
     "paths": {
       "@/*": ["./src/*", "./*"],
-      "@/lib/*": ["./src/lib/*"],
+      "@/lib/*": ["./lib/*"],
       "@/types": ["./types"],
       "@/types/*": ["./types/*"],
       "@/components/*": ["./src/components/*", "./app/components/*"],
