feat: complete component consolidation and enhance UI
- Consolidate ChatInterface.tsx versions by integrating UserProfile features from src version
- Add current project indicator and user profile to header
- Remove duplicate ChatInterface.tsx from src/components
- Remove empty src/components directory
- Update tsconfig.json to point @/components/* only to app/components
- Enhanced header now shows project status, user profile, and action buttons

BREAKING CHANGE: All components now consolidated in app/components directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "@/lib/*": ["./lib/*"],
       "@/types": ["./types"],
       "@/types/*": ["./types/*"],
-      "@/components/*": ["./src/components/*", "./app/components/*"],
+      "@/components/*": ["./app/components/*"],
       "@/contexts/*": ["./app/contexts/*"],
       "@/hooks/*": ["./src/hooks/*", "./app/hooks/*"],
       "@/api/*": ["./app/api/*"]
