refactor: complete component organization and structural improvements
- Organize components by feature into logical directories:
  - app/components/chat/ (ChatInterface + test)
  - app/components/project/ (ProjectPreview, ProjectSidebar)
  - app/components/repository/ (RepositoryPreview)
  - app/components/layout/ (MainLayout)
  - app/components/user/ (UserProfile)

- Create index files for cleaner imports and better developer experience
- Standardize all import paths to use feature-based aliases
- Consolidate hooks: move useLocalStorage from src/hooks to app/hooks
- Update tsconfig.json paths to reflect new structure
- Remove empty directories (src/app, src/hooks)

BREAKING CHANGE: Component import paths changed from direct file imports to feature-based imports
- Before: import { ChatInterface } from '@/components/ChatInterface'
- After: import { ChatInterface } from '@/components/chat'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,9 @@
       "@/types": ["./types"],
       "@/types/*": ["./types/*"],
       "@/components/*": ["./app/components/*"],
+      "@/components": ["./app/components"],
       "@/contexts/*": ["./app/contexts/*"],
-      "@/hooks/*": ["./src/hooks/*", "./app/hooks/*"],
+      "@/hooks/*": ["./app/hooks/*"],
       "@/api/*": ["./app/api/*"]
     }
   },
