refactor: complete consolidation by moving lib to app and cleaning up src
- Move lib/ directory to app/lib/ for complete Next.js App Router alignment
- Remove entire src/ directory structure (was only containing test setup)
- Move test setup file to root level as test-setup.ts
- Update tsconfig.json paths to reflect new lib location (@/lib/* -> ./app/lib/*)
- Update vitest.config.ts with correct paths and aliases
- All imports already using @/lib alias work seamlessly with new structure
- All tests passing with new configuration

BREAKING CHANGE: lib directory moved from root to app/lib
- Physical location: lib/ -> app/lib/
- Import paths unchanged: @/lib/* still works
- Complete elimination of src/ directory structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*", "./*"],
-      "@/lib/*": ["./lib/*"],
+      "@/*": ["./*"],
+      "@/lib/*": ["./app/lib/*"],
       "@/types": ["./types"],
       "@/types/*": ["./types/*"],
       "@/components/*": ["./app/components/*"],
