--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swr": "^2.3.6",
     "tailwindcss": "^3.4.17",
     "uuid": "^13.0.0",
     "zod": "^4.1.11"
