fix: use GitHub API instead of git commands for repository operations
- Replace direct git clone with GitHub API-based repository download
- Use zip archive download and extraction for better compatibility
- Add adm-zip dependency for zip file handling
- Fix TypeScript error in repository info access
- Add comprehensive .cursorrules file with development guidelines

BREAKING CHANGE: Repository cloning now uses GitHub API instead of direct git commands

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@ai-sdk/openai": "^2.0.32",
     "@heroicons/react": "^2.2.0",
     "@octokit/rest": "^22.0.0",
+    "@types/adm-zip": "^0.5.7",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "adm-zip": "^0.5.16",
     "ai": "^5.0.49",
     "archiver": "^7.0.1",
     "autoprefixer": "^10.4.21",
