--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "archiver": "^7.0.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "jotai": "^2.14.0",
     "next": "15.5.4",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
