--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
       "@/components": ["./app/components"],
       "@/contexts/*": ["./app/contexts/*"],
       "@/hooks/*": ["./app/hooks/*"],
-      "@/api/*": ["./app/api/*"]
+      "@/api/*": ["./app/api/*"],
+      "@/store/*": ["./app/store/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "types/**/*.ts"],
