docs: enhance documentation to highlight complete e2e integration
- Update README with comprehensive e2e testing pipeline details
- Enhance API Guide with MCP architecture and testing integration
- Expand Workflow Guide with full integration examples
- Update CHANGELOG with latest e2e and GitHub integration features

Highlights:
✅ Playwright E2E + Vitest unit testing suite
✅ Real-time GitHub API integration with fallbacks
✅ Jotai state management for AI requests
✅ Complete user journey validation
✅ Multi-browser testing (Chrome, Firefox, Safari)
✅ Production-ready deployment pipeline

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "swr": "^2.3.6",
     "tailwindcss": "^3.4.17",
     "uuid": "^13.0.0",
+    "web-vitals": "^5.1.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
