--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/adm-zip": "^0.5.7",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vercel/speed-insights": "^1.2.0",
     "adm-zip": "^0.5.16",
     "ai": "^5.0.49",
     "archiver": "^7.0.1",
