feat: add Google Gemini AI integration with model toggle
- Add GEMINI_API_KEY environment variable to all env files
- Install @google/generative-ai and @ai-sdk/google packages
- Refactor AIService to support both OpenAI and Gemini providers:
  * Use gemini-1.5-flash (free tier) as cheapest model option
  * Add provider selection logic with fallback mechanisms
  * Update all methods to accept preferred provider parameter
- Add AI provider atom to store with Jotai state management
- Create UI toggle in ChatHeader for switching between providers:
  * Desktop: Dropdown with 'AI: Gemini (Free)' / 'AI: OpenAI' options
  * Mobile: Compact select dropdown
- Update ChatInterface to pass AI provider state to header
- Add Gemini API key to Vercel Preview and Production environments
- Maintain backward compatibility with existing OpenAI integration

Benefits:
- Cost-effective AI processing with Gemini free tier
- User choice between AI providers
- Fallback to OpenAI when Gemini unavailable
- Seamless switching without app restart

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "deploy:preview": "npx vercel"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.17",
     "@ai-sdk/openai": "^2.0.32",
+    "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.2.0",
     "@octokit/rest": "^22.0.0",
     "@types/adm-zip": "^0.5.7",
