--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-# OpenAI API Configuration
-# Get your API key from: https://platform.openai.com/api-keys
+# AI API Configuration
+# OpenAI API key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Google Gemini API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # GitHub API Configuration (for repository operations)
 # Get your token from: https://github.com/settings/tokens
